fix the alignment of home page on phone
float bad robot left

--- a/sass/materialize.scss
+++ b/sass/materialize.scss
@@ -608,7 +608,7 @@ main{
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#be130c, endColorstr=#be130c)";
   }
 
-  saleItem, .saleItem .center {
+  .saleItem, .saleItem .center {
     float: left;
 }
 
